Implement complete AI workflow based on process diagrams
Features Added:
- YOLOv8 waste detection with 8-class object detection
- Severity analysis and priority assignment (1-5 scale)
- Siamese Network for before/after cleanup verification
- Cleanup quality scoring (0-100%) with reward multipliers
- Dynamic reward points system with severity/category/quality bonuses
- Google Maps API integration for geocoding and distance calculation
- Enhanced Report model with aiVerification, cleanupVerification, rewardPoints

AI Models:
- ai-models/inference/yolo_detector.py: YOLOv8n detector with severity scoring
- ai-models/inference/siamese_network.py: Siamese Network with MobileNetV2
- ai-models/app.py: Flask API with /classify, /detect, /verify-cleanup endpoints

Backend Services:
- backend/utils/aiService.js: HTTP client for AI service integration
- backend/utils/rewardPoints.js: Reward calculation with multipliers
- backend/utils/googleMaps.js: Location services and distance calculation
- backend/controllers/report.controller.js: Enhanced with AI workflow
- backend/models/Report.model.js: Added priority, severity, cleanup verification

Documentation:
- WORKFLOW.md: Complete system workflow with ML architectures
- API_DOCUMENTATION.md: Comprehensive API reference with 30+ endpoints
- README.md: Updated with new features and tech stack

This implements the complete circular process: Report  AI Verify  Classify  Assign  Complete  Verify  Reward

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,9 @@ JWT_EXPIRE=7d
 # AI Model Service
 AI_MODEL_URL=http://localhost:8000
 
+# Google Maps API
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
 # File Upload
 MAX_FILE_SIZE=5000000
 UPLOAD_PATH=./uploads
