--- a/backend/package.json
+++ b/backend/package.json
@@ -8,20 +8,26 @@
     "dev": "nodemon server.js",
     "test": "jest"
   },
-  "keywords": ["waste", "reporting", "api", "express"],
+  "keywords": [
+    "waste",
+    "reporting",
+    "api",
+    "express"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "axios": "^1.13.5",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
